<resources>
    <string name="app_name">Doggoscopes</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="title_label">TitleScreen</string>
    <string name="result_label">ResultPage</string>
    <string name="next">FIND OUT YOUR DOGGOSCOPE!!!</string>
    <string name="back_to_title">Try another dog</string>

    <string name="aries">Mar 21 - Apr 19</string>
    <string name="taurus">Apr 20 - May 20</string>
    <string name="gemini">May 21 - Jun 20</string>
    <string name="cancer">Jun 21 - Jul 22</string>
    <string name="leo">Jul 23 - Aug 22</string>
    <string name="virgo">Aug 23 - Sep 22</string>
    <string name="libra">Sep 23 - Oct 22</string>
    <string name="scorpio">Oct 23 - Nov 21</string>
    <string name="sagittarius">Nov 22 - Dec 21</string>
    <string name="capricorn">Dec 22 - Jan 19</string>
    <string name="aquarius">Jan 20 - Feb 18</string>
    <string name="pisces">Feb 19 - Mar 20</string>

    <string name="question">When was your dog born?</string>
    <string name="result_text">Zodiac</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>